# ubuntu-base

./: LICENSE  README.md  administrator.pub  jenkins.pub  jenkinsfile  proxmox-ubuntu-web.pkr.hcl  proxmox-ubuntu.pkr.hcl  pyproject.toml  ubuntubase.jenkinsfile  ubuntuwebserver.jenkinsfile
ansible/: main.yml
ansible/roles/apache/tasks/: main.yaml
ansible/roles/common/tasks/: main.yaml
base-values/: common.pkvars.hcl
http/: user-data  user-data.pkrtpl
scripts/: provisioning.sh
