[tool.poetry]
name = "base-ubuntu"
version = "0.1.0"
description = "Base images using packer"
authors = ["Angel Castro <castrobasurto.angel@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ansible = "^10.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
